methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:7: error: not found: value nbPas
    for (n <- 1 to nbPas) {
                   ^MethodsArgs:11: error: not found: value nbPas
    for (n <- 1 to nbPas) {
                   ^